Add createExpense function
